LUCENE-9727: build side support for running Hunspell tests. (#2313)